--- a/css/style.css
+++ b/css/style.css
@@ -27,11 +27,11 @@ img{
 
 .main{
   width: 100%;
-  max-width: 600px;
-  background-color: #ffffff;
+  max-width: 800px;
+  background-color: #19283f;;
   margin: 0 auto;
   border-spacing: 0;
-  color: #4a4a4a;
+  color: white;
 }
 
 a,a:hover,a:focus{
@@ -40,7 +40,7 @@ a,a:hover,a:focus{
 }
 
 .button{
-  background-color: #289dcf;
+  background-color: #00B0FF;
   border: none;
   outline: none;
   padding:10px 15px;
